--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swogbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is my swog bot for Discord.",
   "main": "swogbot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BenGNelson/swog-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BenGNelson/swog-bot/issues"
+  },
+  "homepage": "https://github.com/BenGNelson/swog-bot#readme"
 }
